--- a/OCRLibTest/OCRLibTest/CameraViewController.xib
+++ b/OCRLibTest/OCRLibTest/CameraViewController.xib
@@ -1,12 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CameraViewController">
             <connections>
+                <outlet property="showLabel" destination="9dc-LE-uvw" id="rmZ-JF-ZN0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +19,38 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0F-Za-tXr">
+                    <rect key="frame" x="20" y="25" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="FKG-RU-0BM"/>
+                        <constraint firstAttribute="width" constant="46" id="xMr-my-Rqm"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
+                    <state key="normal" title="Back"/>
+                    <connections>
+                        <action selector="clickBackBtn:" destination="-1" eventType="touchUpInside" id="fLT-9Y-760"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dc-LE-uvw">
+                    <rect key="frame" x="20" y="318.5" width="335" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="fOk-mq-iKt"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
+                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="i0F-Za-tXr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="3OS-cS-CY4"/>
+                <constraint firstItem="i0F-Za-tXr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="5c3-Tc-jv1"/>
+                <constraint firstAttribute="trailing" secondItem="9dc-LE-uvw" secondAttribute="trailing" constant="20" id="FEb-cn-rpK"/>
+                <constraint firstItem="9dc-LE-uvw" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="RbV-qI-VRG"/>
+                <constraint firstItem="9dc-LE-uvw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="wYq-Ki-KXZ"/>
+                <constraint firstItem="9dc-LE-uvw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wj0-fG-IA4"/>
+            </constraints>
         </view>
     </objects>
 </document>
