--- a/OCRLibTest/OCRLibTest/CameraViewController.xib
+++ b/OCRLibTest/OCRLibTest/CameraViewController.xib
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Helvetica.ttc">
-            <string>Helvetica</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CameraViewController">
             <connections>
@@ -26,31 +21,33 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0F-Za-tXr">
-                    <rect key="frame" x="20" y="25" width="46" height="30"/>
+                    <rect key="frame" x="25" y="35" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="FKG-RU-0BM"/>
                         <constraint firstAttribute="width" constant="46" id="xMr-my-Rqm"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
-                    <state key="normal" title="Back"/>
+                    <state key="normal" title="返回">
+                        <color key="titleColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
                     <connections>
                         <action selector="clickBackBtn:" destination="-1" eventType="touchUpInside" id="fLT-9Y-760"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dc-LE-uvw">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="显示失败状态" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dc-LE-uvw">
                     <rect key="frame" x="20" y="318.5" width="335" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="fOk-mq-iKt"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
-                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
+                    <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="i0F-Za-tXr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="3OS-cS-CY4"/>
-                <constraint firstItem="i0F-Za-tXr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="5c3-Tc-jv1"/>
+                <constraint firstItem="i0F-Za-tXr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="35" id="3OS-cS-CY4"/>
+                <constraint firstItem="i0F-Za-tXr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="25" id="5c3-Tc-jv1"/>
                 <constraint firstAttribute="trailing" secondItem="9dc-LE-uvw" secondAttribute="trailing" constant="20" id="FEb-cn-rpK"/>
                 <constraint firstItem="9dc-LE-uvw" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="RbV-qI-VRG"/>
                 <constraint firstItem="9dc-LE-uvw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="wYq-Ki-KXZ"/>
